--- a/css/style.css
+++ b/css/style.css
@@ -3808,12 +3808,12 @@ h2.unpublice-titel {
     max-width: 800px; 
 }
 
-#timeline .accordion .accordion-body .w_full .modal-dialog .modal-header {
+#exampleModalShiftModal .modal-dialog .modal-header {
     background-color: #1f88b5;
     color: #fff; 
 }
 
-#timeline .accordion .accordion-body .w_full .modal-dialog .modal-header .btn_close {
+#exampleModalShiftModal .modal-dialog .modal-header .btn_close {
     border: none;
     outline: none;
     background-color: initial;
@@ -3821,38 +3821,38 @@ h2.unpublice-titel {
     font-size: 22px;
 }
 
-#timeline .accordion .accordion-body .w_full .modal-content .modal-footer .close_modal_btn {
+#exampleModalShiftModal .modal-content .modal-footer .close_modal_btn {
     border: none;
     outline: none;
     border: 2px solid #e10078;
     color: #e10078;
     background-color: #fff;
     transition: all 0.5s ease-in-out;
-    padding: 10px 16px;
+    padding: 6px 16px;
     border-radius: 5px;
     font-weight: 600;
 }
 
-#timeline .accordion .accordion-body .w_full .modal-content .modal-footer .close_modal_btn:hover {
+#exampleModalShiftModal .modal-content .modal-footer .close_modal_btn:hover {
     border: 2px solid #ad005c;
     background-color: #ad005c;
     color: #fff;
 }
 
-#timeline .accordion .accordion-body .w_full .modal-content .delete_modal_btn {
+#exampleModalShiftModal .modal-content .delete_modal_btn {
     border: none;
     outline: none;
     transition: all 0.5s ease-in-out;
     background-color: inherit;
     color: #e10078;
-    padding: 12px 16px;
+    padding: 6px 16px;
     border-radius: 5px;
     border: 2px solid #e10078;
     font-weight: 600;
     margin-right: 10px;
 }
 
-#timeline .accordion .accordion-body .w_full .modal-content .delete_modal_btn:hover {
+#exampleModalShiftModal .modal-content .delete_modal_btn:hover {
     background-color: #ad005c;
     color: #fff;
     border: 2px solid #ad005c;
