changes in index file

--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ h6 {
     height: 240px;
     background-color: #fff;
     box-shadow: rgb(0 0 0 / 25%) 0px 2px 8px;
-    cursor:  pointer;
+    cursor: pointer;
     display: none;
 }
 
@@ -87,7 +87,7 @@ h6 {
 }
 
 .customSelect .customSelectItem:hover {
-    background-color:#1f88b533;
+    background-color: #1f88b533;
 }
 
 .customSelect .customSelectItem .labelElement {
@@ -98,7 +98,7 @@ h6 {
     cursor: pointer;
 }
 
-.customSelect .customSelectItem .labelElement .firstLastLetter { 
+.customSelect .customSelectItem .labelElement .firstLastLetter {
     background-color: #1f88b5;
     color: #fff;
     font-weight: 500;
@@ -126,24 +126,25 @@ h6 {
     border-radius: 50%;
 }
 
-.customSelect .customSelectItem .labelElement .customRadio .dot { 
+.customSelect .customSelectItem .labelElement .customRadio .dot {
     height: 10px;
     width: 10px;
     /* background-color: #e10078; */
     border-radius: 50%;
 }
 
-.customSelectItem [type="radio"]:checked + .labelElement .dot {
+.customSelectItem [type="radio"]:checked+.labelElement .dot {
     background-color: #e10078;
 }
 
-.customSelectItem [type="radio"]:checked + .labelElement {
+.customSelectItem [type="radio"]:checked+.labelElement {
     background-color: #1f88b533;
 }
 
 .show_select {
     display: block;
 }
+
 /* custom select element css end */
 
 
@@ -301,8 +302,8 @@ Header Left Menu
 .nav-links nav ul li button:focus i {
     color: #1f88b5;
 }
-  
-.sidepanel  {
+
+.sidepanel {
     width: 0;
     position: fixed;
     z-index: 1;
@@ -313,50 +314,50 @@ Header Left Menu
     overflow-x: hidden;
     transition: all 0.5s ease-in-out;
     padding-top: 30px;
-  }
-  
-  .sidepanel ul {
+}
+
+.sidepanel ul {
     padding: 0px 10px 0px 20px !important;
     list-style: none;
-  }
-  
-  .sidepanel a {
+}
+
+.sidepanel a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 16px !important;
     color: #1f88b5 !important;
     display: block;
     transition: 0.3s;
-  }
-  
-  .sidepanel a:hover {
+}
+
+.sidepanel a:hover {
     color: #1f88b5d4 !important;
     background-color: unset !important;
-  }
-  
-  .sidepanel .closebtn {
+}
+
+.sidepanel .closebtn {
     font-size: 20px !important;
     color: #666 !important;
     font-weight: 500 !important;
-  }
-  
-  .sidepanel .svgColor {
+}
+
+.sidepanel .svgColor {
     fill: #1f88b5;
     margin-right: 12px;
-  }
-  
-  .openbtn {
+}
+
+.openbtn {
     font-size: 20px;
     cursor: pointer;
     /* background-color: #111; */
     color: white;
     padding: 10px 15px;
     border: none;
-  }
-  
-  .openbtn:hover {
-    background-color:#444;
-  }
+}
+
+.openbtn:hover {
+    background-color: #444;
+}
 
 .logo-text h3 {
     font-size: 28px;
@@ -591,7 +592,7 @@ h4.my-summry-part {
     border-left: 50px solid transparent;
     border-right: 50px solid transparent;
     border-bottom: 100px solid #f7f7f9;
-    left: 0;
+    left: var(--leftBack, 427px);
 }
 
 aside.right-side-info {
@@ -864,7 +865,7 @@ p.next {
 }
 
 .publish_rota_content .no_of_rota_publish,
-.unpublish_rota_content .no_of_rota_publish  {
+.unpublish_rota_content .no_of_rota_publish {
     color: #fff;
     background: #1f88b5;
     height: 28px;
@@ -895,12 +896,12 @@ p.next {
     color: #1f88b5;
     transition: all 0.3s ease-in-out;
     font-weight: 500;
-} 
+}
 
 .parent_div .rota_shift_employee_name:hover {
     text-decoration: none;
     color: #276a87;
-} 
+}
 
 .parent_div .three_dot_btn {
     border: none;
@@ -913,7 +914,7 @@ p.next {
 }
 
 .parent_div .three_dot_btn:hover,
-.parent_div .three_dot_btn:focus { 
+.parent_div .three_dot_btn:focus {
     fill: #fff;
     background-color: #1f88b5;
 }
@@ -1026,12 +1027,19 @@ p.next {
     margin: 35px 0px 7px 0px;
 }
 
+.active-rots-slt-from .filter_btn {
+    margin-top: 30px;
+    padding: 5px 10px;
+    color: #1f86b2b0;
+    font-weight: 500;
+}
+
 .rotas .nav-link.active {
     border: none;
     border-bottom: 2.5px solid #32323a;
     color: #106e97;
     font-size: 18px;
-    font-weight: 500;    
+    font-weight: 500;
 }
 
 .rotas .nav-link {
@@ -1040,7 +1048,8 @@ p.next {
     color: #1f88b5;
 }
 
-.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
     border-color: unset;
 }
 
@@ -1186,24 +1195,24 @@ h2.unpublice-titel {
     cursor: pointer;
 }
 
-.select-rota .card-btn input:checked + .bg-color {
+.select-rota .card-btn input:checked+.bg-color {
     background-color: #1f88b533;
 }
 
 .select-rota .bg-color {
     padding: 20px;
-}    
-
-.select-rota .form-select ,
-.select-rota .form-control {
-    border: 2px solid #a1a9b3;
-    outline: none; 
 }
 
-.select-rota .form-select:focus ,
+.select-rota .form-select,
+.select-rota .form-control {
+    border: 2px solid #a1a9b3;
+    outline: none;
+}
+
+.select-rota .form-select:focus,
 .select-rota .form-control:focus {
     border: 2px solid #1f88b5;
-    box-shadow: rgb(0 0 0 / 25%) 0px 2px 8px; 
+    box-shadow: rgb(0 0 0 / 25%) 0px 2px 8px;
 }
 
 .create-a-rota-info h2 {
@@ -1250,7 +1259,7 @@ h2.unpublice-titel {
 .formTwo .select-rota .card-btn .custom-btn .bg-color-custom-btn {
     height: 13px;
     width: 13px;
-    border-radius:  50%;
+    border-radius: 50%;
 }
 
 .formTwo .select-rota .card-btn .change-color .bg-color {
@@ -1258,11 +1267,11 @@ h2.unpublice-titel {
     font-weight: 600;
 }
 
-.select-rota .card-btn input:checked + .change-color {
+.select-rota .card-btn input:checked+.change-color {
     background-color: #1f88b533;
 }
 
-.select-rota .card-btn input:checked + .change-color .bg-color-custom-btn {
+.select-rota .card-btn input:checked+.change-color .bg-color-custom-btn {
     background-color: #1c79a1;
 }
 
@@ -1331,7 +1340,131 @@ h2.unpublice-titel {
     margin-bottom: 16px;
 }
 
-.content-info-titlep {}
+.calendar .all_leave_with_color .leave {
+    display: inline-block;
+    margin: 0px 10px;
+}
+
+.calendar .all_leave_with_color .annual {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background: #70c4f9;
+}
+
+.calendar .all_leave_with_color .sick {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background: #e0ae2e;
+}
+
+.calendar .all_leave_with_color .late {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background: #d75863;
+}
+
+.calendar .all_leave_with_color .toil {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background: #ff9d78;
+}
+
+.calendar .all_leave_with_color .other_leave {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background: #7DAFA3;
+}
+
+.calendar .all_leave_with_color .pending_leave {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background: #E10078;
+}
+
+.content-info-title .unapproved_btn {
+    border: none;
+    outline: none;
+    padding: 4px 8px;
+    background-color: #e10078;
+    color: #fff;
+    border-radius: 5px;
+    font-weight: 600;
+}
+
+.content-info-title .unapproved_btn:hover {
+    background-color: #ad005c;
+}
+
+.content-info-title .pending_rquest .short_name {
+    font-weight: 600;
+    color: #fff;
+    background-color: #1f88b5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 25px;
+    height: 80px;
+    width: 80px;
+    border-radius: 50%;
+}
+
+.content-info-title .pending_rquest .rota_shift_employee_name {
+    text-decoration: none;
+    color: #1f88b5;
+    transition: all 0.3s ease-in-out;
+    font-weight: 500;
+    font-size: 20px;
+    text-transform: capitalize;
+}
+
+.unapproved_modal_content .modal-head {
+    color: #fff;
+    background: #1f88b5;
+}
+
+.unapproved_modal_content .modal-head .close-btn {
+    color: #fff;
+    font-size: 20px;
+}
+
+.unapproved_modal_content .modal-footer .approve-btn {
+    border: none;
+    outline: none;
+    padding: 8px 16px;
+    background-color: #e10078;
+    color: #fff;
+    border-radius: 5px;
+    font-weight: 600;
+    transition: all 0.5s ease-in-out;
+}
+
+.unapproved_modal_content .modal-footer .approve-btn:hover {
+    background-color: #ad005c;
+}
+
+.unapproved_modal_content .modal-footer .close-btn {
+    border: none;
+    outline: none;
+    padding: 6px 16px;
+    background-color: #fff;
+    color: #e10078;
+    border: 2px solid #e10078;
+    border-radius: 5px;
+    font-weight: 600;
+    transition: all 0.5s ease-in-out;
+}
+
+.unapproved_modal_content .modal-footer .close-btn:hover {
+    background-color: #ad005c;
+    color: #fff;
+    border-color: #ad005c;
+}
 
 /* index page header css */
 .search_employees {
@@ -1749,7 +1882,7 @@ h2.unpublice-titel {
 .employment-details .cancel-btn {
     border: none;
     outline: none;
-    background-color:#fff;
+    background-color: #fff;
     border: 2px solid #ad005c;
     color: #ad005c;
     padding: 6px 18px;
@@ -2004,7 +2137,7 @@ h2.unpublice-titel {
     box-shadow: rgb(136 136 136) 1px 4px 8px -4px;
 }
 
-.working-time-pattern .third-content .cards .card-btn .radio_btn:checked + .direct-sibling {
+.working-time-pattern .third-content .cards .card-btn .radio_btn:checked+.direct-sibling {
     background-color: #1f88b51c;
     height: 100%;
 }
@@ -2052,6 +2185,7 @@ h2.unpublice-titel {
     border-radius: 3px;
     font-weight: 600;
 }
+
 /* Working Time Pattern css end here */
 
 /* Fixed employee setup css start from here */
@@ -2093,7 +2227,7 @@ h2.unpublice-titel {
 }
 
 #showDiv .folder-icon {
-    color:#a1a9b3;
+    color: #a1a9b3;
     font-size: 25px;
 }
 
@@ -2188,12 +2322,13 @@ h2.unpublice-titel {
 .tab-btn .nav-item .link-nav.active {
     border-bottom: 2.5px solid #32323a;
     font-size: 18px;
-    font-weight: 500;   
+    font-weight: 500;
 }
 
 .tab-btn .tab-content {
     font-size: 16px;
 }
+
 /* tabs css end here*/
 
 /* Follow Steps css start from here   */
@@ -2227,7 +2362,7 @@ h2.unpublice-titel {
 
 .tab-content #tabThree .search-team label {
     width: 80px;
-    align-self: center; 
+    align-self: center;
 }
 
 /* Tab three content css end here */
@@ -2354,7 +2489,7 @@ h2.unpublice-titel {
 }
 
 .accordion .card {
-    box-shadow:0 0px 2px 0 rgb(0 0 0 / 0%), 0 1px 6px 0 rgb(0 0 0 / 8%);
+    box-shadow: 0 0px 2px 0 rgb(0 0 0 / 0%), 0 1px 6px 0 rgb(0 0 0 / 8%);
     margin: 10px;
 }
 
@@ -2374,7 +2509,7 @@ h2.unpublice-titel {
     background-color: #fff !important;
     border: 2px solid #e10078 !important;
     color: #e10078 !important;
-    border-radius: 5px; 
+    border-radius: 5px;
     padding: 3px 10px;
     font-weight: 500;
     transition: 0.3s;
@@ -2410,7 +2545,7 @@ h2.unpublice-titel {
 }
 
 #form2 .address-detail .card-btn input {
-    height: 100%;       
+    height: 100%;
     width: 100%;
     inset: 0;
     position: absolute;
@@ -2418,7 +2553,7 @@ h2.unpublice-titel {
     cursor: pointer;
 }
 
-#form2 .address-detail .card-btn input:checked + .bg-color {
+#form2 .address-detail .card-btn input:checked+.bg-color {
     background-color: #1f88b533;
 }
 
@@ -2434,10 +2569,11 @@ h2.unpublice-titel {
 
 #form2 .address-detail .previous button:hover {
     background-color: #ad005c;
-    color: #fff;;
+    color: #fff;
+    ;
     border: 2px solid #ad005c;
 }
- 
+
 #form2 .address-detail .continue_save button {
     background-color: #e10078;
     color: #fff;
@@ -2573,7 +2709,7 @@ h2.unpublice-titel {
 }
 
 #form4 .Annual-leave-entitlement .card-btn input {
-    height: 100%;       
+    height: 100%;
     width: 100%;
     inset: 0;
     position: absolute;
@@ -2582,7 +2718,7 @@ h2.unpublice-titel {
     z-index: 1;
 }
 
-#form4 .Annual-leave-entitlement .card-btn input:checked + .bg-color {
+#form4 .Annual-leave-entitlement .card-btn input:checked+.bg-color {
     background-color: #1f88b533;
 }
 
@@ -2667,7 +2803,7 @@ h2.unpublice-titel {
 #form5 .summary .parent-border .B-bottom {
     border-bottom: 1px solid #99999982;
     padding: 15px;
-} 
+}
 
 #form5 .summary .parent-border .B-bottom b {
     font-weight: 500;
@@ -2722,6 +2858,7 @@ h2.unpublice-titel {
     transition: 0.3s;
     font-weight: 600;
 }
+
 /* Custom toggle button css end here */
 
 #form5 .summary .previous button:hover,
@@ -2765,7 +2902,8 @@ h2.unpublice-titel {
     background-color: #ad005c;
     color: #fff;
     border: 2px solid #ad005c;
-} 
+}
+
 /* Step Five Summry end here */
 
 
@@ -2835,7 +2973,7 @@ h2.unpublice-titel {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 5px;    
+    margin: 5px;
 }
 
 #tabThree .modal .modal-dialog .employee-name .name p {
@@ -2920,7 +3058,7 @@ h2.unpublice-titel {
 
 .annual-leave .dash-btn {
     background-color: #fff;
-    color:  #e10078;
+    color: #e10078;
     border: 2px solid #e10078;
     padding: 5px 10px;
     border-radius: 5px;
@@ -2932,7 +3070,7 @@ h2.unpublice-titel {
 
 .annual-leave .dash-btn:hover {
     background-color: #ad005c;
-    color:  #fff;
+    color: #fff;
     border: 2px solid #ad005c;
 }
 
@@ -2976,7 +3114,7 @@ h2.unpublice-titel {
     align-items: center;
 }
 
-.user-detail .mail-info  {
+.user-detail .mail-info {
     align-self: center;
 }
 
@@ -3019,7 +3157,7 @@ h2.unpublice-titel {
     padding: 5px 10px;
     transition: 0.3s;
     font-size: 14px;
-} 
+}
 
 .mail-info .mail-account .registraion-btn button:hover {
     background-color: #ad005c;
@@ -3059,7 +3197,7 @@ h2.unpublice-titel {
 
 .tab-parent .nav-item {
     margin: 20px 0px 0px 0px !important;
-} 
+}
 
 .tab-content .add-padding {
     padding: 15px;
@@ -3216,7 +3354,7 @@ h2.unpublice-titel {
 }
 
 #tabTwo .accordion .accordion-item {
-    border: 1px solid #1f88b54f; 
+    border: 1px solid #1f88b54f;
 }
 
 .accordion-button:not(.collapsed) {
@@ -3241,7 +3379,7 @@ h2.unpublice-titel {
     right: 20px;
     opacity: 0.7;
     font-weight: 600;
-}   
+}
 
 #tabTwo .accordion .employees-data .col-form-label {
     font-size: 16px;
@@ -3283,9 +3421,9 @@ h2.unpublice-titel {
     position: absolute;
     opacity: 0 !important;
     cursor: pointer;
-} 
+}
 
-#tabTwo .accordion .accordion-body .detail .card-btn input[type="radio"]:checked + .bg-color {
+#tabTwo .accordion .accordion-body .detail .card-btn input[type="radio"]:checked+.bg-color {
     background-color: #1f88b533;
 }
 
@@ -3373,6 +3511,7 @@ h2.unpublice-titel {
     padding: 18px 18px;
     background-position: center;
 }
+
 /* Tab three css end here */
 
 /* Tab four css start from here */
@@ -3569,6 +3708,7 @@ h2.unpublice-titel {
 #tabFive #show {
     display: none;
 }
+
 /* Tab five css end here */
 
 /* Personal detail Tabs end here */
@@ -3588,7 +3728,7 @@ h2.unpublice-titel {
 
 #timeline .shift-patern .label_custom {
     border: 2px solid #1f88b538;
-    padding: 8px 15px; 
+    padding: 8px 15px;
     color: #1f88b5;
     border-radius: 30px;
     font-weight: 600;
@@ -3598,7 +3738,7 @@ h2.unpublice-titel {
     background-color: #1f88b538;
 }
 
-#timeline .shift-patern .input_custom_btn:checked + .label .label_custom {
+#timeline .shift-patern .input_custom_btn:checked+.label .label_custom {
     background-color: #1f88b538;
 }
 
@@ -3713,12 +3853,12 @@ h2.unpublice-titel {
     display: none;
 }
 
-.addShift .modal-dialog .employee-name .custom_checkbox:checked + .name {
+.addShift .modal-dialog .employee-name .custom_checkbox:checked+.name {
     background-color: #1c79a114;
     border-color: #1c79a157;
 }
 
-.addShift .modal-dialog .employee-name .custom_checkbox:checked + .name .select_tick {
+.addShift .modal-dialog .employee-name .custom_checkbox:checked+.name .select_tick {
     display: block;
 }
 
@@ -3752,7 +3892,7 @@ h2.unpublice-titel {
     width: 100%;
     border: 1px solid #bbc0c3;
     position: relative;
-    line-height: 11px; 
+    line-height: 11px;
     display: flex;
 }
 
@@ -3805,12 +3945,12 @@ h2.unpublice-titel {
 }
 
 #timeline .accordion .accordion-body .w_full .modal-dialog {
-    max-width: 800px; 
+    max-width: 800px;
 }
 
 #exampleModalShiftModal .modal-dialog .modal-header {
     background-color: #1f88b5;
-    color: #fff; 
+    color: #fff;
 }
 
 #exampleModalShiftModal .modal-dialog .modal-header .btn_close {
@@ -3948,21 +4088,22 @@ h2.unpublice-titel {
     padding: 6px 12px;
     border-radius: 5px;
     margin-right: 10px;
-} 
+}
 
 #timeline .print_and_publish_button .modal-dialog .publish_btn_footer:hover {
     background-color: #ad005c;
     border-color: #ad005c;
 }
+
 /* timeline-view page css end here */
 
-.shrink_all > * {
+.shrink_all>* {
     flex: 1;
     font-weight: 600;
 }
 
 .view_detail_modal {
-    border-bottom: 2px solid  #d9d9d9;
+    border-bottom: 2px solid #d9d9d9;
 }
 
 .view_detail_modal .custom_checkbox {
@@ -3979,11 +4120,11 @@ h2.unpublice-titel {
     transition: all 0.3s ease-in-out;
 }
 
-.view_detail_modal #break_check:checked + .custom_checkbox span {
+.view_detail_modal #break_check:checked+.custom_checkbox span {
     background-color: #e10078;
-} 
+}
 
-.row_detail .shrink_all > * {
+.row_detail .shrink_all>* {
     font-weight: inherit;
     opacity: 0.7;
 }
@@ -4029,11 +4170,11 @@ h2.unpublice-titel {
     border-radius: 50%;
 }
 
-.custom_radio_input:checked + .custom_label {
+.custom_radio_input:checked+.custom_label {
     background: #1f88b51c;
 }
 
-.custom_radio_input:checked + .custom_label .parent_custom_radio .custom_radio {
+.custom_radio_input:checked+.custom_label .parent_custom_radio .custom_radio {
     background-color: #1f88b5;
 }
 
@@ -4063,4 +4204,5 @@ h2.unpublice-titel {
     top: 35px;
     left: 0px;
 }
+
 /* add lateness css end */
